# Domani-Photo-Search

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DATA_MODEL.md  Dockerfile  ENV_SPEC.md  LOGGING_AND_MONITORING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: top50_validation_template.csv
data/processed/: photos.jsonl
data/processed/dictionaries/: colors.json  compositions.json  objects.json  room_objects.json  styles.json
docs/: INDEXING_RUNBOOK.md  OPENAI_RANKING_PROMPT_SPEC.md  REPO_STRUCTURE.md  TELEGRAM_INTEGRATION_SPEC.md  TEST_PLAN.md  TOP50_VALIDATION_TEMPLATE.md
scripts/: ingest_csv.py  reindex.py
src/domani_photo_search/api/: main.py  routes.py
src/domani_photo_search/bot/: telegram_client.py  webhook.py
src/domani_photo_search/config/: settings.py
src/domani_photo_search/dictionaries/: loader.py
src/domani_photo_search/indexing/: dictionary_builder.py  ingest.py
src/domani_photo_search/llm/: ranker.py
src/domani_photo_search/models/: api.py  photo.py
src/domani_photo_search/search/: engine.py  normalizer.py  scoring.py
src/domani_photo_search/services/: history.py
src/domani_photo_search/testing/: sample_data.py
src/domani_photo_search/utils/: io.py  text.py
tests/: test_normalizer.py  test_search_engine.py
tests/contract/: test_api_contract.py
tests/integration/: test_confirm_and_refine.py  test_history_and_admin.py  test_ranking_fallback.py  test_telegram_callback_flow.py
